typescript/checker/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName8.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            25,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName8.ts:2:10
  |
2 | var v: { [e]: number };
  |          ^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            26,
        ),
        hi: BytePos(
            27,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName8.ts:2:11
  |
2 | var v: { [e]: number };
  |           ^

